# WPBD---Wprowadzenie-do-Big-Data

./: .gitignore  README.md  cleanup.sh  create_connection.py  create_connector.py  create_tables.py  docker-compose.yaml  generate_data.py  pyproject.toml
config/: connector_config.json
connector-setup/: Dockerfile  create_connector.py
database/: db_manager.py  models.py
database/dbo/: customers.py  orders.py  orders_items.py
spark/scripts/: batch_processor.py  jobs.sh  streaming_processor.py
