[tool.poetry]
name = "wpbd"
version = "0.1.0"
description = ""
authors = ["Tomasz Serafiński <work.serafinski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.38"
sqlalchemy-utils = "^0.41.2"
faker = "^36.1.1"
pg8000 = "^1.31.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

