[project]
name = "wpbd-wprowadzenie-do-big-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.1.0",
    "pg8000>=1.31.2",
    "pyspark>=3.5.5",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
]
